# FNaF-Engine-Rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/Loaders/: AssetLoader.rs  FontLoader.rs  GameLoader.rs  PluginManager.rs
src/Logic/Game/: AudioManager.rs  MenuManager.rs  OfficeManager.rs  TickManager.rs
src/Logic/Game/Types/: Button.rs  OfficeData.rs  RevAnimation.rs
src/Logic/Scripting/: EventManager.rs  LuaBindings.rs  MathEvaluator.rs  Scheduler.rs  Scheduler.rs2  ScriptingAPI.rs
src/Renderers/: MenuRenderer.rs  OfficeRenderer.rs
src/Utils/: CrashHandler.rs  Logger.rs  SmartFPS.rs
