[package]
name = "FNaF-Engine-Rust"
version = "0.1.0"
authors = ["hexdev"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
async-recursion = "1.1.0"
#piston = "0.55.0"
#tetra = "0.8.0"
#font-loader = "0.11.0"
#piston2d-graphics = "0.44.0"
#pistoncore-glutin_window = "0.72.0"
#piston2d-opengl_graphics = "0.83.0"
#piston_window = "0.131.0"
find_folder = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }
regex = "1.10.4"
#fps_counter = "2.0.0"
#bevy = "0.12.1"
#comfy = "0.3.1"
#vulkust = "0.1.0"
#wasm-bindgen = "0.2.90"
#Nylon = { path = "/media/hexdev/New Volume/actually repos/Nylon" }
tetra = { path = "G:/actually repos/tetra" }
fragile = "2.0.0"
rodio = "0.19.0"
glob = "0.3.1"
dashmap = "6.0.1"
meval = "0.2.0"
reqwest = "0.12.5"
sysinfo = "0.30.13"
ctrlc = "3.4.4"
libc = "0.2.155"
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }
rand = { version = "0.9.0-alpha.1", features = [] }
image = "0.24.8"
rayon = "1.8.1"
crossbeam = "0.8.4"
delta = "0.2.1"
mlua = { version = "0.9.9", features = ["luau-jit"] }
libloading = "0.8.5"